@@ -1,1 +1,1 @@
-* { border-width: 1px; }
+* { border-width: 3px; }
