@@ -3,9 +3,10 @@ figlet "Disable SDDM"
 if [ -f /etc/systemd/system/display-manager.service ]; then
     if gum confirm "Do you want to disable the current display manager?" ;then
         sudo rm /etc/systemd/system/display-manager.service
-        echo "Current display manager removed. Please reboot your system."
+        echo ":: Current display manager removed." 
+        echo ":: Please reboot your system."
     fi
 else
-    echo "No display manager enabled."
+    echo ":: No Display Manager enabled."
 fi
 sleep 3
