@@ -85,7 +85,7 @@ ForceLastUser="true"
 ForcePasswordFocus="true"
 ## Give automatic focus to the password field. Together with ForceLastUser this makes for the fastest login experience.
 
-ForceHideCompletePassword="false"
+ForceHideCompletePassword="true"
 ## If you don't like to see any character at all not even while being entered set this to true.
 
 ForceHideVirtualKeyboardButton="false"
